Use Math.clamp for the pre-commit retry bound (SonarCloud S6885)
Refs #1277